# Smart-Persona

Backend-SmartPersona/: Cargo.toml  diesel.toml
Backend-SmartPersona/src/config/: config_loader.rs  config_model.rs
Backend-SmartPersona/src/domain/: mod.rs
Backend-SmartPersona/src/domain/entities/: ai_analysis.rs  mod.rs  user.rs
Backend-SmartPersona/src/domain/repo/: ai_service.rs  mod.rs  user.rs
Backend-SmartPersona/src/domain/usecase/: ai_analysis.rs  authentication.rs  mod.rs  user.rs
Backend-SmartPersona/src/domain/value_object/: user.rs
Backend-SmartPersona/src/infrastructure/: mod.rs
Backend-SmartPersona/src/infrastructure/ai_service_client/: client.rs
Backend-SmartPersona/src/infrastructure/axum_http/: http_serve.rs  middleware.rs  mod.rs
Backend-SmartPersona/src/infrastructure/axum_http/routers/: admin.rs  ai_handlers.rs  authentication.rs  mod.rs  user.rs
Backend-SmartPersona/src/infrastructure/postgres/: postgres_connection.rs  schema.rs
Backend-SmartPersona/src/infrastructure/postgres/2025-10-12-161704-0000_init_database/: down.sql
Backend-SmartPersona/src/infrastructure/postgres/migrations/2025-10-12-164029-0000_create_initial_schema/: up.sql
Backend-SmartPersona/src/infrastructure/postgres/migrations/2025-10-12-174327-0000_rename_email_to_username_in_users/: down.sql  up.sql
Backend-SmartPersona/src/infrastructure/postgres/migrations/2025-10-13-181627-0000_add_names_to_users/: down.sql  up.sql
Backend-SmartPersona/src/infrastructure/postgres/repositories/: user.rs
Frontend-SmartPersona/: package-lock.json  package.json
(+14 files in other folders)
